--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Steve Clarke",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.5.3",
     "bcrypt": "^3.0.6",
     "config": "^3.2.3",
     "cors": "^2.8.5",
