--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "nohomo-api",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app/server.js",
   "scripts": {
-    "dev": "nodemon -r dotenv/config server.js",
+    "dev": "nodemon -r dotenv/config app/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Steve Clarke",
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
-    "mongoose": "^5.7.4"
+    "mongoose": "^5.7.4",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
