--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "nohomo-api",
   "version": "1.0.0",
   "description": "",
-  "main": "app/server.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon -r dotenv/config app/server.js",
+    "dev": "nodemon -r dotenv/config server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Steve Clarke",
